--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <p>
       Lifelong learning, learning HTML and website creation to help my colleagues so that we aren't overly dependent on Dhruval and Khairul.
     </p>
-    <a class="button" href="#contact">Get in touch</a>
+  <a class="button" href="mailto:tobiasfong@aleph-labs.com">Email me</a>
+<a class="button secondary" href="#contact">Contact info</a>
   </div>
 
   <img
