--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h2>Work</h2>
 
   <div class="cards">
-    <a class="card" href="#" aria-label="Experiment 1">
+    <a class="card" href="experiment-1.html">
       <h3>Experiment 1</h3>
       <p>Short description of what you tested and what you learned.</p>
     </a>
