--- a/experiment-1.html
+++ b/experiment-1.html
@@ -1,1 +1,72 @@
-<a class="card" href="experiment-1.html">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Experiment 1 | Tobias Fong</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <nav class="container">
+      <a href="index.html">Home</a>
+      <a href="index.html#work">Work</a>
+      <a href="index.html#contact">Contact</a>
+    </nav>
+
+    <main class="container">
+      <p class="breadcrumb">
+        <a href="index.html#work">← This is for work.</a>
+      </p>
+
+      <header class="project-hero">
+        <h1>Experiment 1</h1>
+        <p class="meta">Jan 2026 · HTML/CSS · 1 page</p>
+        <p class="lead">
+          I'm not slacking off, I really am working. I'm a humanities major and I'm having difficulty learning coding from scratch.
+        </p>
+      </header>
+
+      <section>
+        <h2>Aims</h2>
+        <p>I an trying to learn coding to help my colleagues and prove that I can still be useful even though I don't have a degree in computer science or engineering. Humanities majors can learn coding too! I might major in literature and history, but I can learn more, and am willing to learn whatever I need to so that I can help my colleagues.</p>
+      </section>
+
+      <section>
+        <h2>This is an experiment.</h2>
+        <ul>
+          <li>My first experiment.</li>
+          <li>I need to master html script.</li>
+          <li>Eventually, I might be able to become a technical writer instead of a copywriter.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Challenges</h2>
+        <ul>
+          <li>Time is always going to be a huge constraint.</li>
+          <li>But I will overcome my lack of talent with hard work!</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>What's next?</h2>
+        <ul>
+          <li>I will continue experimenting. I still have Prototype 1 and Experiment 2!</li>
+          <li>Maybe I'll see if I can create a new blog from scratch. Who knows?</li>
+        </ul>
+      </section>
+
+      <section id="links">
+        <h2>Links</h2>
+        <ul>
+          <li><a href="index.html#contact">Contact me about this</a></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="container">
+      <p>© 2026 Tobias Fong</p>
+    </footer>
+  </body>
+</html>
