--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 
   <div class="cards">
     <a class="card" href="experiment-1.html">
-      <h3>Experiment 1</h3>
-      <p>Short description of what you tested and what you learned.</p>
-    </a>
+  <h3>Experiment 1</h3>
+  <p>This is an experiment to test if I'm getting this right.</p>
+</a>
 
     <a class="card" href="#" aria-label="Prototype 1">
       <h3>Prototype 1</h3>
-      <p>Short description of the prototype and why it matters.</p>
+      <p>This is a prototype website, maybe? Nothing to do with the game where you play as a superpowered mutant.</p>
     </a>
 
     <a class="card" href="#" aria-label="Experiment 2">
       <h3>Experiment 2</h3>
-      <p>Short description of the build and what you would improve next.</p>
+      <p>Well, I can't just stop at <i>one</i> experiment, can I?</i></p>
     </a>
   </div>
 </section>
