--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h2>Work</h2>
 
   <div class="cards">
-    <a class="card" href="experiment-1.html">
+    <a class="card" href="projects/experiment-1.html">
   <h3>Experiment 1</h3>
   <p>This is an experiment to test if I'm getting this right.</p>
 </a>
