--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Experiment 1 | Tobias Fong</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
     <nav class="container">
-      <a href="index.html">Home</a>
-      <a href="index.html#work">Work</a>
-      <a href="index.html#contact">Contact</a>
+      <a href="../index.html">Home</a>
+<a href="../index.html#work">Work</a>
+<a href="../index.html#contact">Contact</a>
     </nav>
 
     <main class="container">
