--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Experiment 1 | Tobias Fong</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
-    <nav class="container">
-      <a href="../index.html">Home</a>
-<a href="../index.html#work">Work</a>
-<a href="../index.html#contact">Contact</a>
-    </nav>
+  <nav class="container">
+  <a href="/">Home</a>
+  <a href="/#work">Work</a>
+  <a href="/#contact">Contact</a>
+</nav>
 
     <main class="container">
       <p class="breadcrumb">
-        <a href="index.html#work">← This is for work.</a>
+        <a href="/#work">← This is for work.</a>
       </p>
 
       <header class="project-hero">
