--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -16,7 +16,7 @@
 
     <main class="container">
       <p class="breadcrumb">
-        <a href="/#work">← This is for work.</a>
+        <a href="../index.html#work">← This is for work.</a>
       </p>
 
       <header class="project-hero">
