--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -60,7 +60,7 @@
       <section id="links">
         <h2>Links</h2>
         <ul>
-          <li><a href="index.html#contact">Contact me about this</a></li>
+          <li><a href="../index.html#contact">Contact me about this</a></li>
         </ul>
       </section>
     </main>
