--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
       <p>This is a prototype website, maybe? Nothing to do with the game where you play as a superpowered mutant.</p>
     </a>
 
-    <a class="card" href="#" aria-label="Experiment 2">
-      <h3>Experiment 2</h3>
-      <p>Well, I can't just stop at <i>one</i> experiment, can I?</i></p>
-    </a>
+   <a class="card" href="projects/experiment-2.html">
+  <h3>Experiment 2/実験2</h3>
+  <p>Well, I can't just stop at <i>one</i> experiment, can I?それに、僕は日本語で話せることができると証明したいです。</p>
   </div>
 </section>
 
