--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -70,3 +70,6 @@
     </footer>
   </body>
 </html>
+body {
+  font-family: system-ui, -apple-system, "Hiragino Sans", "Noto Sans JP", "Yu Gothic", "Meiryo", Arial, sans-serif;
+}
