--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -35,7 +35,7 @@
       <section>
         <h2>何で証明しなければなりません？</h2>
         <ul>
-          <li>就職する為に、未来の雇用主を感動させようと思います。</li>
+          <li>就職する為に、将来の雇用主に感銘を与えたいと思います。</li>
           <li>これは成功したら、自分が役に立たない人ではないと証明したいです。</li>
           <li>自分を上達するように。ここで立ち止まるわけにはいけませんから。</li>
         </ul>
