--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="#about">About</a>
   <a href="#work">Work</a>
   <a href="#contact">Contact</a>
+   <a   href="/projects/">Projects</a>
 </nav>
 <header class="container hero">
   <div class="hero-text">
