--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -11,6 +11,7 @@
   <nav class="container">
   <a href="/">Home</a>
   <a href="/#work">Work</a>
+  <a  href="/projects/"Projects</a>
   <a href="/#contact">Contact</a>
 </nav>
 
