--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -11,6 +11,7 @@
     <nav class="container">
       <a href="/">ホーム</a>
       <a href="/#work">実験一覧</a>
+      <a href="/projects/"プロジェクト</a>
       <a href="/#contact">連絡先</a>
     </nav>
 
