--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Site</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <script src="/script.js"></script>
 
   <body>
     <nav class="container">
