--- a/projects/index.html
+++ b/projects/index.html
@@ -9,6 +9,7 @@
   <body>
     <nav class="container">
       <a href="/">Home</a>
+      <a href="/#work">Work</a>
       <a href="/projects/" class="active">Projects</a>
       <a href="/#contact">Contact</a>
     </nav>
