--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -16,9 +16,9 @@
 </nav>
 
     <main class="container">
-      <p class="breadcrumb">
-        <a href="../index.html#work">← This is for work.</a>
-      </p>
+     <p class="breadcrumb">
+  <a href="/projects/">← Back to Projects</a>
+</p>
 
       <header class="project-hero">
         <h1>Experiment 1</h1>
