--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -16,9 +16,9 @@
     </nav>
 
     <main class="container">
-      <p class="breadcrumb">
-        <a href="/#work">← 実験一覧に戻る</a>
-      </p>
+     <p class="breadcrumb">
+  <a href="/projects/">← 実験一覧に戻る</a>
+</p>
 
       <header class="project-hero">
         <h1>実験2</h1>
