--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -61,7 +61,7 @@
       <section id="links">
         <h2>リンク</h2>
         <ul>
-          <li><a href="/#contact">この実験について連絡する</a></li>
+          <li><a href="/#contact">問い合わせる</a></li>
         </ul>
       </section>
     </main>
