--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -6,6 +6,12 @@
     <title>実験2 | Tobias Fong</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
+<a class="card" href="/projects/experiment-1.html">
+  <img class="card-thumb" src="/img/projects/Pikachu.jpg" alt="Experiment 1 screenshot" loading="lazy" />
+  <h3>Experiment 1</h3>
+  <p>Pikachu.</p>
+  <p class="tag">HTML/CSS</p>
+</a>
 
   <body>
     <nav class="container">
