--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -21,6 +21,12 @@
 </p>
 
       <header class="project-hero">
+        <img
+  class="project-image"
+  src="/img/projects/Glaceon.jpg"
+  alt="Screenshot for Experiment 1"
+  loading="lazy"
+/>
         <h1>Experiment 1</h1>
         <p class="meta">Jan 2026 · HTML/CSS · 1 page</p>
         <p class="lead">
