--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -21,6 +21,12 @@
 </p>
 
       <header class="project-hero">
+        <img
+  class="project-image"
+  src="/img/projects/Glaceon.jpg"
+  alt="Screenshot for Experiment 2"
+  loading="lazy"
+/>
         <h1>実験2</h1>
         <p class="meta">2026年1月 · HTML/CSS · 1ページ</p>
         <p class="lead">
