--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -23,7 +23,7 @@
       <header class="project-hero">
         <img
   class="project-image"
-  src="/img/projects/Glaceon.jpg"
+  src="/img/projects/Pikachu.jpg"
   alt="Screenshot for Experiment 1"
   loading="lazy"
 />
