--- a/projects/index.html
+++ b/projects/index.html
@@ -18,16 +18,18 @@
       <h1>Projects</h1>
       <div class="cards">
         <a class="card" href="/projects/experiment-1.html">
-          <h3>Experiment 1</h3>
-          <p>Short description.</p>
-          <p class="tag">HTML/CSS</p>
-        </a>
+  <img class="card-thumb" src="/img/projects/Pikachu.jpg" alt="Experiment 1 screenshot" loading="lazy" />
+  <h3>Experiment 1</h3>
+  <p>Experimenting with Github.</p>
+  <p class="tag">HTML/CSS</p>
+</a>
 
         <a class="card" href="/projects/experiment-2.html">
-          <h3>実験2</h3>
-          <p>日本語ページとリンク設計の検証。</p>
-          <p class="tag">HTML/CSS</p>
-        </a>
+  <img class="card-thumb" src="/img/projects/Glaceon.jpg" alt="Experiment 2 screenshot" loading="lazy" />
+  <h3>実験2</h3>
+  <p>日本語ページとリンク設計の検証。</p>
+  <p class="tag">HTML/CSS</p>
+</a>
       </div>
     </main>
 
