--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -42,8 +42,8 @@
         <h2>何で証明しなければなりません？</h2>
         <ul>
           <li>就職する為に、将来の雇用主に感銘を与えたいと思います。</li>
-          <li>これは成功したら、自分が役に立たない人ではないと証明したいです。</li>
-          <li>自分を上達するように。ここで立ち止まるわけにはいけませんから。</li>
+          <li>これが成功したら、自分も役に立てると証明したいです。</li>
+          <li>自分を成長させるために。ここで立ち止まるわけにはいけませんから。</li>
         </ul>
       </section>
 
@@ -59,7 +59,7 @@
         <h2>次にどうなるかな？</h2>
         <ul>
           <li>この先へ続けようと思います。</li>
-          <li>専門は文学と歴史の僕は、コンピューターのコードやhtmlなども上手に出来ます。</li>
+          <li>文学と歴史を専攻している僕でも、コンピューターのコードやhtmlなども上手に出来ます。</li>
         </ul>
       </section>
 
