--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <main class="container">
        <section id="about">
-      <h2>Experimental website for Aleph</h2>
-      <p>Lifelong learning, learning html and website creation to help my colleagues so that we aren't overly dependent on Dhruval and Khairul.
+      <h2>Experimenting with all kinds of writing</h2>
+      <p>Hello, I'm Tobias Fong. I may be a major in Japanese literature and history (PhD), but I am determined to learn coding as well. I currently work for Aleph.
         </p>
 </section>
 
@@ -48,7 +48,7 @@
   <div class="cards">
     <a class="card" href="projects/experiment-1.html">
   <h3>Experiment 1</h3>
-  <p>This is an experiment to test if I'm getting this right.</p>
+  <p>This is an experiment to test if I'm getting this right. It's to demonstrate my ability to code html.</p>
 </a>
 
     <a class="card" href="#" aria-label="Prototype 1">
@@ -58,7 +58,7 @@
 
    <a class="card" href="projects/experiment-2.html">
   <h3>Experiment 2 /　実験2</h3>
-  <p>Well, I can't just stop at <i>one</i> experiment, can I?　それに、僕は日本語で話せることができると証明したいです。</p>
+  <p>Well, I can't just stop at <i>one</i> experiment, can I?　それに、僕は日本語で読むと書くことができると証明したいです。その上に、日本語の内容も取り扱えます。 <i>(This proves that I am able to read and write Japanese, as well as handle Japanese content).</i></i></p>
   </div>
 </section>
 
