--- a/index.html
+++ b/index.html
@@ -3,75 +3,85 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Site</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Tobias Fong</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
     <nav class="container">
-  <a href="#about">About</a>
-  <a href="#work">Work</a>
-  <a   href="/projects/">Projects</a>
-  <a href="#contact">Contact</a>
-</nav>
-<header class="container hero">
-  <div class="hero-text">
-    <h1>Tobias Fong</h1>
-    <p class="lead">Experimental website for Aleph</p>
-    <p>
-      Lifelong learning, learning HTML and website creation to help my colleagues so that we aren't overly dependent on Dhruval and Khairul.
-    </p>
-  <a class="button" href="mailto:tobiasfong@aleph-labs.com">Email me</a>
-<a class="button secondary" href="#contact">Contact info</a>
-  </div>
+      <a href="#about">About</a>
+      <a href="#work">Work</a>
+      <a href="/projects/">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
 
-  <img
-    class="hero-image"
-    src="img/Rowlet.jpg"
-    alt="rowlet"
-    width="360"
-    height="360"
-  />
-</header>
+    <header class="container hero">
+      <div class="hero-text">
+        <h1>Tobias Fong</h1>
+        <p class="lead">Experimental website for Aleph</p>
+        <p>
+          Lifelong learning. Learning HTML and website creation to help my colleagues so we aren’t overly dependent on Dhruval and Khairul.
+        </p>
+        <a class="button" href="mailto:tobiasfong@aleph-labs.com">Email me</a>
+        <a class="button secondary" href="#contact">Contact info</a>
+      </div>
 
+      <img
+        class="hero-image"
+        src="/img/Rowlet.jpg"
+        alt="Rowlet"
+        width="360"
+        height="360"
+        loading="lazy"
+      />
+    </header>
 
     <main class="container">
-       <section id="about">
-      <h2>Experimenting with all kinds of writing</h2>
-      <p>Hello, I'm Tobias Fong. I may be a major in Japanese literature and history (PhD), but I am determined to learn coding as well. I currently work for Aleph.
+      <section id="about">
+        <h2>Experimenting with all kinds of writing</h2>
+        <p>
+          Hello, I’m Tobias Fong. I may be a major in Japanese literature and history (PhD), but I’m determined to learn coding as well. I currently work for Aleph.
         </p>
-</section>
+      </section>
 
-<section id="work">
-  <h2>Work</h2>
+      <section id="work">
+        <h2>Work</h2>
 
-  <div class="cards">
-    <a class="card" href="projects/experiment-1.html">
-  <h3>Experiment 1</h3>
-  <p>This is an experiment to test if I'm getting this right. It's to demonstrate my ability to code html.</p>
-</a>
+        <div class="cards">
+          <a class="card" href="/projects/experiment-1.html">
+            <h3>Experiment 1</h3>
+            <p>
+              This is an experiment to test if I’m getting this right. It demonstrates basic HTML structure and layout.
+            </p>
+          </a>
 
-    <a class="card" href="#" aria-label="Prototype 1">
-      <h3>Prototype 1</h3>
-      <p>This is a prototype website, maybe? Nothing to do with the game where you play as a superpowered mutant.</p>
-    </a>
+          <a class="card" href="#" aria-label="Prototype 1">
+            <h3>Prototype 1</h3>
+            <p>
+              This is a prototype website, maybe. Nothing to do with the game where you play as a superpowered mutant.
+            </p>
+          </a>
 
-   <a class="card" href="projects/experiment-2.html">
-  <h3>Experiment 2 /　実験2</h3>
-  <p>Well, I can't just stop at <i>one</i> experiment, can I?　それに、僕は日本語で読むと書くことができると証明したいです。その上に、日本語の内容も取り扱えます。 <i>(This proves that I am able to read and write Japanese, as well as handle Japanese content).</i></p>
-  </div>
-</section>
-
+          <a class="card" href="/projects/experiment-2.html">
+            <h3>Experiment 2 / 実験2</h3>
+            <p>
+              Well, I can’t just stop at <i>one</i> experiment, can I. それに、僕は日本語で読むと書くことができると証明したいです。その上に、日本語の内容も取り扱えます。
+              <i>(This shows I can read and write Japanese and handle Japanese content.)</i>
+            </p>
+          </a>
+        </div>
+      </section>
 
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email: tobiasfong@aleph-labs.com</p>
+        <p>Email: <a href="mailto:tobiasfong@aleph-labs.com">tobiasfong@aleph-labs.com</a></p>
       </section>
     </main>
 
     <footer class="container">
       <p>© 2026 Tobias Fong</p>
     </footer>
+
     <script src="/script.js"></script>
   </body>
 </html>
