--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Tobias Fong</h1>
         <p class="lead">Experimental website for Aleph</p>
         <p>
-          Lifelong learning. Learning HTML and website creation to help my colleagues so we aren’t overly dependent on Dhruval and Khairul.
+          Lifelong learning. Learning HTML and website creation to help my colleagues so we aren’t overly dependent on Dhruval, Prasad, Shiv, Marcel and Khairul.
         </p>
         <a class="button" href="mailto:tobiasfong@aleph-labs.com">Email me</a>
         <a class="button secondary" href="#contact">Contact info</a>
