--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -46,6 +46,34 @@
           <li>Eventually, I might be able to become a technical writer instead of a copywriter.</li>
         </ul>
       </section>
+      <section aria-label="Gallery">
+  <h2>Gallery</h2>
+
+  <section class="carousel" aria-label="Image carousel">
+    <div class="carousel-track" id="track">
+      <article class="slide">
+        <img src="/img/Rowlet.jpg" alt="Rowlet" width="900" height="600" loading="lazy" />
+        <p class="caption">Slide 1</p>
+      </article>
+
+      <article class="slide">
+        <img src="/img/Pikachu.jpg" alt="Pikachu" width="900" height="600" loading="lazy" />
+        <p class="caption">Slide 2</p>
+      </article>
+
+      <article class="slide">
+        <img src="/img/Glaceon.jpg" alt="Glaceon" width="900" height="600" loading="lazy" />
+        <p class="caption">Slide 3</p>
+      </article>
+    </div>
+
+    <div class="carousel-controls">
+      <button class="button secondary" type="button" data-dir="-1">Prev</button>
+      <button class="button secondary" type="button" data-dir="1">Next</button>
+    </div>
+  </section>
+</section>
+
 
       <section>
         <h2>Challenges</h2>
