--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Experiment 1 | Tobias Fong</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/projects/components/carousel/carousel.css" />
   </head>
 
   <body>
@@ -102,5 +103,6 @@
     <footer class="container">
       <p>© 2026 Tobias Fong</p>
     </footer>
+    <script src="/projects/components/carousel/carousel.js"></script>
   </body>
 </html>
