--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -51,7 +51,7 @@
   <h2>Gallery</h2>
 
   <section class="carousel" aria-label="Image carousel">
-    <div class="carousel-track" id="track">
+    <div class="carousel-track">
       <article class="slide">
         <img src="/img/Rowlet.jpg" alt="Rowlet" width="900" height="600" loading="lazy" />
         <p class="caption">Slide 1</p>
