--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -64,12 +64,12 @@
       </article>
 
       <article class="slide">
-        <img src="/img/Pikachu.jpg" alt="Pikachu" width="900" height="600" loading="lazy" />
+        <img src="/img/projects/Pikachu.jpg" alt="Pikachu" width="900" height="600" loading="lazy" />
         <p class="caption">Slide 2</p>
       </article>
 
       <article class="slide">
-        <img src="/img/Glaceon.jpg" alt="Glaceon" width="900" height="600" loading="lazy" />
+        <img src="/img/projects/Glaceon.jpg" alt="Glaceon" width="900" height="600" loading="lazy" />
         <p class="caption">Slide 3</p>
       </article>
     </div>
