--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -52,18 +52,24 @@
 
   <section class="carousel" aria-label="Image carousel">
     <div class="carousel-track">
-      <article class="slide">
-        <img src="/img/Rowlet.jpg" alt="Rowlet" width="900" height="600" loading="lazy" />
-        <p class="caption">Slide 1</p>
-      </article>
+    <article class="slide">
+  <div class="slide-media">
+    <img src="/img/Rowlet.jpg" alt="Rowlet" loading="lazy" />
+  </div>
+  <p class="caption">Slide 1</p>
+</article>
 
       <article class="slide">
-        <img src="/img/projects/Pikachu.jpg" alt="Pikachu" width="900" height="600" loading="lazy" />
+         <div class="slide-media">
+        <img src="/img/projects/Pikachu.jpg" alt="Pikachu" loading="lazy" />
+           </div>
         <p class="caption">Slide 2</p>
       </article>
 
       <article class="slide">
-        <img src="/img/projects/Glaceon.jpg" alt="Glaceon" width="900" height="600" loading="lazy" />
+         <div class="slide-media">
+        <img src="/img/projects/Glaceon.jpg" alt="Glaceon" loading="lazy" />
+           </div>
         <p class="caption">Slide 3</p>
       </article>
     </div>
