--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -67,14 +67,14 @@
 
       <article class="slide">
         <div class="slide-media">
-        <img src="/img/projects/Pikachu.jpg" alt="Pikachu" width="900" height="600" loading="lazy" />
+        <img src="/img/projects/Pikachu.jpg" alt="Pikachu" loading="lazy" />
         </div>
         <p class="caption">Slide 2</p>
       </article>
 
       <article class="slide">
         <div class="slide-media">
-        <img src="/img/projects/Glaceon.jpg" alt="Glaceon" width="900" height="600" loading="lazy" />
+        <img src="/img/projects/Glaceon.jpg" alt="Glaceon" loading="lazy" />
         </div>
         <p class="caption">Slide 3</p>
       </article>
