--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -56,21 +56,21 @@
   <div class="slide-media">
     <img src="/img/Rowlet.jpg" alt="Rowlet" loading="lazy" />
   </div>
-  <p class="caption">Slide 1</p>
+  <p class="caption">Rowlet</p>
 </article>
 
       <article class="slide">
          <div class="slide-media">
         <img src="/img/projects/Pikachu.jpg" alt="Pikachu" loading="lazy" />
            </div>
-        <p class="caption">Slide 2</p>
+        <p class="caption">Pikachu</p>
       </article>
 
       <article class="slide">
          <div class="slide-media">
         <img src="/img/projects/Glaceon.jpg" alt="Glaceon" loading="lazy" />
            </div>
-        <p class="caption">Slide 3</p>
+        <p class="caption">Glaceon</p>
       </article>
     </div>
 
