--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -62,21 +62,21 @@
   <div class="slide-media">
     <img src="/img/Rowlet.jpg" alt="Rowlet" loading="lazy" />
   </div>
-  <p class="caption">Slide 1</p>
+  <p class="caption">モクロー</p>
 </article>
 
       <article class="slide">
         <div class="slide-media">
         <img src="/img/projects/Pikachu.jpg" alt="Pikachu" loading="lazy" />
         </div>
-        <p class="caption">Slide 2</p>
+        <p class="caption">ピカチュウ</p>
       </article>
 
       <article class="slide">
         <div class="slide-media">
         <img src="/img/projects/Glaceon.jpg" alt="Glaceon" loading="lazy" />
         </div>
-        <p class="caption">Slide 3</p>
+        <p class="caption">グレイシア</p>
       </article>
     </div>
 
