--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:tobiasfong@aleph-labs.com">tobiasfong@aleph-labs.com</a></p>
+        <p>Email: <a href="mailto:tobias.fong@aleph-labs.com">tobias.fong@aleph-labs.com</a></p>
       </section>
     </main>
 
