--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -83,7 +83,7 @@
 </section>
 
       <section class="accordion" data-accordion>
-  <h2 class="accordion-title">Notes</h2>
+  <h2 class="accordion-title">An experiment</h2>
 
   <div class="accordion-item">
     <h3>
