--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -88,7 +88,7 @@
   </section>
 </section>
       <section class="accordion" data-accordion>
-  <h2 class="accordion-title">Notes</h2>
+  <h2 class="accordion-title">何か、やってみましょうか？</h2>
 
   <div class="accordion-item">
     <h3>
