--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/projects/components/carousel/carousel.css" />
     <link rel="stylesheet" href="/projects/components/accordion/accordion.css" />
+    <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
   </head>
 
   <body>
@@ -129,6 +130,16 @@
       <p>I will be adding more types of components as I do my best to learn coding.</p>
     </div>
   </div>
+</section>
+
+      <section class="text-image">
+  <div class="text-image__text">
+    <h2>Rowlet</h2>
+    <p>Disclaimer: This is for demonstrating how I can create and use a text-image component, so most of this text is just random fluff. Rowlet is among the cutest Pokemon and best starters. You can choose him as your starter in Pokemon Sun and Moon (Generation VIII) or in Pokemon: Acreus Legends. He's round and fluffy, has great stats, and is just adorable all around.</p>
+  </div>
+  <figure class="text-image__media">
+    <img src="/img/Rowlet2.jpg" alt="Experiment 1 screenshot" loading="lazy" />
+  </figure>
 </section>
 
       <section>
