--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/projects/components/carousel/carousel.css" />
     <link rel="stylesheet" href="/projects/components/accordion/accordion.css" />
+    <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
   </head>
 
   <body>
@@ -134,6 +135,15 @@
       <p>もっとコンポーネントを作ろうと思います。</p>
     </div>
   </div>
+</section>
+<section class="text-image">
+  <div class="text-image__text">
+    <h2>What I built</h2>
+    <p>Short summary of the project and what you learned.</p>
+  </div>
+  <figure class="text-image__media">
+    <img src="/img/Rowlet2.jpeg" alt="Experiment 2 screenshot" loading="lazy" />
+  </figure>
 </section>
 
       <section>
