--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -138,7 +138,7 @@
     <p>Disclaimer: This is for demonstrating how I can create and use a text-image component, so most of this text is just random fluff. Rowlet is among the cutest Pokemon and best starters. You can choose him as your starter in Pokemon Sun and Moon (Generation VIII) or in Pokemon: Acreus Legends. He's round and fluffy, has great stats, and is just adorable all around.</p>
   </div>
   <figure class="text-image__media">
-    <img src="/img/Rowlet2.jpg" alt="Experiment 1 screenshot" loading="lazy" />
+    <img src="/img/Rowlet2.jpeg" alt="Experiment 1 screenshot" loading="lazy" />
   </figure>
 </section>
 
