--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -138,8 +138,8 @@
 </section>
 <section class="text-image">
   <div class="text-image__text">
-    <h2>What I built</h2>
-    <p>Short summary of the project and what you learned.</p>
+    <h2>モクロー</h2>
+    <p>モクローは一番可愛いポケモンです。ポケモンサンとムーンを遊んでみましょう！それとも、ポケモン：伝説アルセウスをやってみたいですか？</p>
   </div>
   <figure class="text-image__media">
     <img src="/img/Rowlet2.jpeg" alt="Experiment 2 screenshot" loading="lazy" />
