--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a class="card" href="/projects/experiment-2.html">
             <h3>Experiment 2 / 実験2</h3>
             <p>
-              Well, I can’t just stop at <i>one</i> experiment, can I. それに、僕は日本語で読むと書くことができると証明したいです。その上に、日本語の内容も取り扱えます。
+              Well, I can’t just stop at <i>one</i> experiment, can I? それに、僕は日本語で読むと書くことができると証明したいです。その上に、日本語の内容も取り扱えます。
               <i>(This shows I can read and write Japanese and handle Japanese content.)</i>
             </p>
           </a>
