--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/projects/components/carousel/carousel.css" />
     <link rel="stylesheet" href="/projects/components/accordion/accordion.css" />
     <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
+    <link rel="stylesheet" href="/projects/components/modal/modal.css" />
   </head>
 
   <body>
@@ -141,7 +142,7 @@
     <img src="/img/Rowlet2.jpeg" alt="Experiment 1 screenshot" loading="lazy" />
   </figure>
 </section>
-
+<button class="button" id="openModalBtn">Click Here</button>
       <section>
         <h2>Challenges</h2>
         <ul>
@@ -171,5 +172,6 @@
     </footer>
     <script src="/projects/components/carousel/carousel.js"></script>
     <script src="/projects/components/accordion/accordion.js"></script>
+    <script src="/projects/components/modal/modal.js"></script>
   </body>
 </html>
