--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/projects/components/carousel/carousel.css" />
     <link rel="stylesheet" href="/projects/components/accordion/accordion.css" />
     <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
+    <link rel="stylesheet" href="/projects/components/modal/modal.css" />
   </head>
 
   <body>
@@ -145,7 +146,7 @@
     <img src="/img/Rowlet2.jpeg" alt="Experiment 2 screenshot" loading="lazy" />
   </figure>
 </section>
-
+<button class="button" id="openModalBtn">ここをクリックしてください</button>
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
@@ -167,5 +168,6 @@
     </footer>
     <script src="/projects/components/carousel/carousel.js"></script>
     <script src="/projects/components/accordion/accordion.js"></script>
+    <script src="/projects/components/modal/modal.js"></script>
   </body>
 </html>
