--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -143,6 +143,14 @@
   </figure>
 </section>
 <button class="button" id="openModalBtn">Click Here</button>
+      <div class="modal" id="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn">&times;</button>
+    <h2>A display of my learning</h2>
+    <p>I am demonstrating that I can successfully create a modal.</p>
+  </div>
+</div>
+
       <section>
         <h2>Challenges</h2>
         <ul>
