--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -147,6 +147,13 @@
   </figure>
 </section>
 <button class="button" id="openModalBtn">ここをクリックしてください</button>
+      <div class="modal" id="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn">&times;</button>
+    <h2>また実験です</h2>
+    <p>ぼくは、モダールを作ることができると証明します。</p>
+  </div>
+</div>
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
