--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -151,7 +151,7 @@
   <div class="modal-content">
     <button class="close-btn" id="closeModalBtn">&times;</button>
     <h2>また実験です</h2>
-    <p>ぼくは、モダールを作ることができると証明します。</p>
+    <p>僕は、モダールを作ることができると証明します。</p>
   </div>
 </div>
       <section>
