--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -150,7 +150,23 @@
     <p>I am demonstrating that I can successfully create a modal.</p>
   </div>
 </div>
+<button class="button" id="openModalBtn">SURPRISE!</button>
+      <!-- Modal structure -->
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn">&times;</button>
+    <h2>Modal Title</h2>
+    <p>SURPRISE!</p>
+    
+    <!-- Add image inside the modal -->
+    <figure class="modal-image">
+      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+      <figcaption>You surprised poor Rowlet!</figcaption>
+    </figure>
 
+    <p><a href="/projects/">Go back to Projects</a></p>
+  </div>
+</div>
       <section>
         <h2>Challenges</h2>
         <ul>
