--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -160,7 +160,7 @@
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+      <img src="https://tobiasfong.github.io/img/SurprisedRowlet.jpeg" alt="Rowlet" />
       <figcaption>You surprised poor Rowlet!</figcaption>
     </figure>
 
