--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -163,9 +163,15 @@
 
       <figcaption>You surprised poor Rowlet!</figcaption>
     </figure>
-
+<img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
+    <img
+  class="project-image"
+  src="/img/SurprisedRowlet.jpeg"
+  alt="Screenshot for Experiment 1"
+  loading="lazy"
+/>
 </div>
       <section>
         <h2>Challenges</h2>
@@ -174,7 +180,7 @@
           <li>But I will overcome my lack of talent with hard work!</li>
         </ul>
       </section>
-      <img src="https://tobiasfong.github.io/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+      
       <section>
         <h2>What's next?</h2>
         <ul>
