--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -150,23 +150,37 @@
     <p>I am demonstrating that I can successfully create a modal.</p>
   </div>
 </div>
-<button class="button" id="openModalBtn">SURPRISE!</button>
-      <!-- Modal structure -->
-<div class="modal" id="modal">
+<!-- First Modal Trigger Button -->
+<button class="button" id="openModalBtn-1">Click Here</button>
+
+<!-- First Modal -->
+<div class="modal" id="modal-1">
   <div class="modal-content">
-    <button class="close-btn" id="closeModalBtn">&times;</button>
+    <button class="close-btn" id="closeModalBtn-1">&times;</button>
+    <h2>A display of my learning</h2>
+    <p>I am demonstrating that I can successfully create a modal.</p>
+  </div>
+</div>
+
+<!-- Second Modal Trigger Button -->
+<button class="button" id="openModalBtn-2">SURPRISE!</button>
+
+<!-- Second Modal -->
+<div class="modal" id="modal-2">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn-2">&times;</button>
     <h2>Modal Title</h2>
     <p>SURPRISE!</p>
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-
       <figcaption>You surprised poor Rowlet!</figcaption>
+      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     </figure>
-<img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
+      
       <section>
         <h2>Challenges</h2>
         <ul>
