--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -146,14 +146,35 @@
     <img src="/img/Rowlet2.jpeg" alt="Experiment 2 screenshot" loading="lazy" />
   </figure>
 </section>
-<button class="button" id="openModalBtn">ここをクリックしてください</button>
-      <div class="modal" id="modal">
+
+<!-- First Modal -->
+<div class="modal" id="modal-1">
   <div class="modal-content">
-    <button class="close-btn" id="closeModalBtn">&times;</button>
+    <button class="close-btn" id="closeModalBtn-1">&times;</button>
     <h2>また実験です</h2>
     <p>僕は、モダールを作ることができると証明します。</p>
   </div>
 </div>
+
+<!-- Second Modal Trigger Button -->
+<button class="button" id="openModalBtn-2"せーの！</button>
+
+<!-- Second Modal -->
+<div class="modal" id="modal-2">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn-2">&times;</button>
+    <h2>Modal Title</h2>
+    <p>捕まえた！</p>
+    
+    <!-- Add image inside the modal -->
+    <figure class="modal-image">
+      <figcaption>可哀相のモクローが驚かせた！</figcaption>
+      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+    </figure>
+    <p><a href="/projects/">Go back to Projects</a></p>
+  </div>
+</div>
+
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
