--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -147,6 +147,9 @@
   </figure>
 </section>
 
+      <!-- First Modal Trigger Button -->
+<button class="button" id="openModalBtn-1"ここをクリックしてください。</button>
+  
 <!-- First Modal -->
 <div class="modal" id="modal-1">
   <div class="modal-content">
@@ -157,7 +160,7 @@
 </div>
 
 <!-- Second Modal Trigger Button -->
-<button class="button" id="openModalBtn-2"せーの！</button>
+<button class="button" id="openModalBtn-2">せーの！</button>
 
 <!-- Second Modal -->
 <div class="modal" id="modal-2">
