--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -148,7 +148,7 @@
 </section>
 
       <!-- First Modal Trigger Button -->
-<button class="button" id="openModalBtn-1"ここをクリックしてください。</button>
+<button class="button" id="openModalBtn-1">ここをクリックしてください。</button>
   
 <!-- First Modal -->
 <div class="modal" id="modal-1">
