--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -171,7 +171,7 @@
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <figcaption>可哀相のモクローが驚かせた！</figcaption>
+      <figcaption>可哀相なモクローが驚された！</figcaption>
       <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
