--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -172,6 +172,25 @@
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
+      <!-- Third Modal Trigger Button -->
+<button class="button" id="openModalBtn-3">Another Surprise!</button>
+
+<!-- Third Modal -->
+<div class="modal" id="modal-3">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn-3">&times;</button>
+    <h2>Modal #3</h2>
+    <p>Yet another surprise!</p>
+    
+    <!-- Add image inside the modal -->
+    <figure class="modal-image">
+      <figcaption>This time, it's Pikachu!</figcaption>
+      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+    </figure>
+    <p><a href="/projects/">Go back to Projects</a></p>
+  </div>
+</div>
+
       
       <section>
         <h2>Challenges</h2>
