--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -185,12 +185,11 @@
     <!-- Add image inside the modal -->
     <figure class="modal-image">
       <figcaption>This time, it's Pikachu!</figcaption>
-      <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
+      <img src="/img/SweatPikachu.jpeg" alt="Pikachu" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
-
       
       <section>
         <h2>Challenges</h2>
